--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ configobj==5.0.6
 constantly==15.1.0
 cryptography==2.1.4
 distlib==0.3.0
-distro-info===0.18ubuntu0.18.04.1
+# distro-info===0.18ubuntu0.18.04.1
 dj-database-url==0.5.0
 Django==3.0.5
 django-debug-toolbar==2.2
