--- a/requirements.txt
+++ b/requirements.txt
@@ -40,7 +40,7 @@ Markdown==3.2.2
 MarkupSafe==1.0
 netifaces==0.10.4
 oauthlib==2.0.6
-PAM==0.4.2
+# PAM==0.4.2
 Pillow==7.1.1
 psycopg2==2.8.5
 pyasn1==0.4.2
