--- a/requirements.txt
+++ b/requirements.txt
@@ -61,7 +61,7 @@ SecretStorage==2.3.1
 service-identity==16.0.0
 six==1.11.0
 sqlparse==0.3.1
-ssh-import-id==5.7
+# ssh-import-id==5.7
 systemd-python==234
 Twisted==17.9.0
 ufw==0.36
