--- a/requirements.txt
+++ b/requirements.txt
@@ -65,7 +65,7 @@ sqlparse==0.3.1
 systemd-python==234
 Twisted==17.9.0
 # ufw==0.36
-unattended-upgrades==0.1
+# unattended-upgrades==0.1
 urllib3==1.22
 virtualenv==20.0.18
 whitenoise==5.1.0
